syntax = "proto3";
package protocols;
option go_package = "github.com/movsb/taoblog/protocols";

import "google/protobuf/field_mask.proto";

message Post {
	int64 id = 1;
	int32 date = 2;
	int32 modified = 3;
	string title = 4;
	string content = 5;
	string slug = 6;
	string type = 7;
	int64 category = 8;
	string status = 9;
	int64 page_view = 10;
	bool comment_status = 11;
	int64 comments = 12;
	map<string,string> metas = 13;
	string source = 14;
	string source_type = 15;
	repeated string tags = 16;
}

message GetPostRequest {
	int32 id = 1;
	bool with_source = 2;
	bool with_content = 3;
	bool with_tags = 4;
	bool with_metas = 5;
}

message UpdatePostRequest {
	Post post = 1;
	google.protobuf.FieldMask update_mask = 2;
}

message DeletePostRequest {
	int32 id = 1;
}

message GetPostCommentsCountRequest {
	int64 post_id = 1;
}

message GetPostCommentsCountResponse {
	int64 count = 1;
}

message SetPostStatusRequest {
	int64 id = 1;
	bool public = 2;

	// Whether to create_time and update_time
	bool touch = 3;
}

message SetPostStatusResponse {

}

message SetRedirectRequest {
	string source_path = 1;
	string target_path = 2;
	int32 status_code = 3;
}

message FileSpec {
	string path = 1;
	uint32 mode = 2;
	uint32 size = 3;
	uint32 time = 4;
}

message FileSystemRequest {
	message InitRequest {
		message Post {
			int64 id = 1;
		}
		oneof For {
			Post post = 1;
		}
	}

	InitRequest init = 1;

	message ListFilesRequest {}
	message WriteFileRequest {
		FileSpec spec = 1;
		bytes data = 2;
	}
	message DeleteFileRequest {
		string path = 1;
	}
	oneof Request {
		ListFilesRequest list_files = 10;
		WriteFileRequest write_file = 11;
		DeleteFileRequest delete_file = 12;
	}
}

message FileSystemResponse {
	message InitResponse{}
	
	InitResponse init = 1;
	
	message ListFilesResponse {
		repeated FileSpec files = 1;
	}
	message WriteFileResponse { }
	message DeleteFileResponse { }

	oneof Response {
		ListFilesResponse list_files = 10;
		WriteFileResponse write_file = 11;
		DeleteFileResponse delete_file = 12;
	}
}
